Update memory pipelining experiment